swagger user login, registration, and notes done
